💄 Fix code wrapping

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -48,7 +48,8 @@ body {
   background-size: 40px 40px;
 }
 
-.gallery {
+.gallery,
+.card {
   min-width: 300px;
   max-width: 1600px;
 
@@ -86,7 +87,8 @@ body {
 }
 
 @media (min-width: 750px) {
-  .gallery {
+  .gallery,
+  .card {
     max-width: 800px;
 
     h1 {
@@ -101,7 +103,8 @@ body {
 }
 
 @media (min-width: 1600px) {
-  .gallery {
+  .gallery,
+  .card {
     max-width: 1500px;
 
     h1 {
@@ -151,6 +154,9 @@ body {
     padding-left: 1rem;
     margin: 0.5rem;
     margin-top: 1rem;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
   }
 }
 
